--- a/09.CHANNELS.ACES.XPORTS.html
+++ b/09.CHANNELS.ACES.XPORTS.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"&gt;">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChAnNeLs AcEs GrOuP XuPeRlIsT XpOrTs</title>
+    <title>ChAnNeLs AcEs GrOuP 
+    XuPeRlIsT XpOrTs</title>
     <style>
         /* Estilos generales */
         body {
@@ -101,7 +102,8 @@
 
     <!-- Encabezado fijo -->
     <header>
-        <h1>ChAnNeLs AcEs GrOuP XuPeRlIsT XpOrTs</h1>
+        <h1>ChAnNeLs AcEs GrOuP 
+        XuPeRlIsT XpOrTs</h1>
     </header>
 
     <!-- Contenido principal -->
