--- a/09.CHANNELS.ACES.XPORTS.html
+++ b/09.CHANNELS.ACES.XPORTS.html
@@ -102,8 +102,8 @@
 
     <!-- Encabezado fijo -->
     <header>
-        <h1>ChAnNeLs AcEs GrOuP 
-        XuPeRlIsT XpOrTs</h1>
+        <h1>⚽ ChAnNeLs AcEx GrOuP 
+        XuPeRlIsT XpOrTs ⚽ </h1>
     </header>
 
     <!-- Contenido principal -->
